# ID3-Lib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
examples/: exampleV1.cpp  exampleV2.cpp
include/: tools.h
include/ID3/v1/: ID3v1.h
include/ID3/v2/: ID3v2.h  ID3v2_ID.h
include/v1/: ID3v1.h
include/v2/: ID3v2.h  ID3v2_ID.h
output/include/: tools.h
output/include/v1/: ID3v1.h
output/include/v2/: ID3v2_Structs.h
src/: CMakeLists.txt  main.cpp
src/ID3/v1/: ID3v1.cpp  ID3v1_Return.cpp  ID3v1_Set.cpp
src/ID3/v2/: ID3v2.cpp  ID3v2_Return.cpp  ID3v2_Set.cpp
src/v1/: ID3v1.cpp  ID3v1_Return.cpp  ID3v1_Set.cpp
src/v2/: ID3v2.cpp  ID3v2_Return.cpp  ID3v2_Set.cpp
